--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
   "Application Name": "7DaysToDieServer",
   "Tap Enter To Close" : true,
   "Ip Address": "127.0.0.1",
-  "Port": "26900",
+  "Port": 26900,
   "Application Shortcut Path": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\7 Days to Die Dedicated Server\\start.lnk"
 }
